--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.14.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
